# dotfiles-rbw

./: .gitignore  clear_snapd.sh
docs/: theming.md  (+3 more)
home/config/quickshell/: .gitignore  .prettierignore  .prettierrc.json  .taplo.toml  AGENTS.md  ARCHITECTURE.md  Makefile  QUICKSHELL_SKILL_FEEDBACK.md  Theme.qml  architecture-decisions.md  codexbar-integration-review.md  eslint.config.cjs  greenfield-shell-architecture.md  launcher-plan.md  package-lock.json  package.json  pyproject.toml  quickshell-review.md  shell.qml  system-bootstrap-plan.md  system-migration-worklog.md
home/config/quickshell/adr/: 0001-core-runtime-strategy.md  0002-compositor-boundary-strategy.md  0003-delivery-strategy.md  0004-contract-model-for-cross-layer-data.md  0005-state-ownership-and-presentation-model-strategy.md  0006-interaction-state-and-responsiveness-strategy.md  0007-agent-first-architecture-guardrails.md  0008-settings-and-persistence-strategy.md  0009-concurrency-idempotency-and-stale-state-handling.md  0010-adapter-implementation-policy.md  0011-logging-observability-and-debuggability-strategy.md  0012-testing-strategy-and-quality-gates.md  0013-launcher-provider-model-and-ranking-persistence.md  0014-optional-integration-policy.md  0016-performance-budgets-and-startup-slas.md  0018-agent-authoring-constraints-golden-paths-and-skill-packaging.md  0019-formatter-linter-and-architecture-review-loop-strategy.md  0020-legacy-tree-cutover-and-migration-strategy.md  0022-theming-provider-and-token-boundary-strategy.md  README.md  backlog.md  owner-decision-packet-2026-04-17.md
(+329 files in other folders)
