[project]
name = "quickshell-weather-tools"
version = "0.1.0"
description = "Python tooling for the Quickshell meteo.pl weather fetcher"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "mypy>=1.11,<2",
    "pytest>=9.0.3,<10",
    "ruff>=0.11,<0.12",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["scripts", "tests"]

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "SIM", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
files = [
    "scripts/fetch_meteo_forecast.py",
    "tests/test_fetch_meteo_forecast.py",
]
